# azure-calculator-backend

./: .env.example  .gitignore  Dockerfile  RAG-knowledge-design.md  RAG系统调优管理平台设计.md  README.md  demo_rag_components.py  docker-compose.yml  pyproject.toml  rag_test.py  run_model_service.py  test_performance_service.py  test_rag_components.py  已实现功能和下一步计划.md
airflow/azure_price_etl/: fetch.py  load.py  transform.py  validate.py
airflow/azure_price_etl/utils/: helpers.py
airflow/dags/: azure_price_sync_dag.py
alembic/: env.py
alembic/versions/: 685c769d9cae_initial_tables.py  976469f92c67_add_status_and_additional_fields_to_.py  befef702c9e3_initial_migration.py  e0847a356030_add_model_management_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  auth.py  chat.py  model_management.py  model_performance.py  performance_scheduler.py  price_analytics.py  products.py  rag.py  roles.py  token_billing.py  users.py
app/core/: config.py  decorators.py  exceptions.py  logging.py  security.py
app/db/: base.py  base_class.py  database.py  session.py
app/models/: __init__.py  association.py  conversation.py  feedback.py  message.py  model_audit_log.py  model_configuration.py  model_performance_test.py  model_price_history.py  model_usage_daily.py  model_usage_hourly.py  model_usage_log.py  product.py  role.py  token_usage.py  user.py  user_model_access.py  user_usage_stats.py
app/prompts/: __init__.py
app/prompts/templates/system/: advisor.j2  intent_analyzer.j2
app/prompts/utils/: parameter_control.py  prompt_manager.py  template_engine.py
app/rag/: RAG-tuning-platform-design.md  rag_playground_app.py
app/rag/adapters/: llama_converters.py  llama_loaders.py  llama_retrievers.py  llama_stores.py
app/rag/components/: __init__.py  chunkers.py  document_loaders.py  embedders.py  generators.py  query_transformers.py  rerankers.py  retrievers.py  vector_store.py
app/rag/core/: config.py  interfaces.py  models.py  registry.py
app/rag/custom/: azure_retriever.py
app/rag/evaluation/: base.py  evaluator.py  metrics.py
app/rag/evaluation/benchmark/: analysis.py  datasets.py  run_benchmark.py  runner.py
app/rag/services/: hybrid_rag_service.py  rag_factory.py
app/rag/utils/: document_utils.py
app/rag/utils/file_processors/: __init__.py  base.py  factory.py  office_processors.py  pdf_processor.py  text_processor.py
app/schemas/: __init__.py  chat.py  product.py  role.py  token.py  token_billing.py  user.py
app/schemas/model_management/: __init__.py  access.py  configuration.py  performance.py  usage.py
app/scripts/: init_db.py  init_default_models.py
app/services/: __init__.py  conversation.py  intent_analysis.py  llm_service.py  mongodb_service.py  product.py  role.py  user.py
app/services/llm/: anthropic_service.py  base.py  context_providers.py  deepseek_service.py  factory.py  openai_service.py
app/services/model_management/: __init__.py  config.py  factory.py  model_configuration_service.py  model_performance_service.py  model_usage_service.py  performance_scheduler_service.py
app/services/token_billing/: __init__.py  analytics_service.py  cache_manager.py  config_manager.py  monitoring.py  plugin_system.py  report_generator.py  scheduler_service.py  token_cost_calculator.py  token_interceptor.py
app/utils/: init_db.py  ldap_utils.py  token_counter.py
celery_tasks/: __init__.py  celery_app.py
celery_tasks/tasks/: __init__.py  cleanup_tasks.py  intent_tasks.py  model_tasks.py  performance_tasks.py  title_tasks.py  token_billing_tasks.py
frontend/: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  uno.config.ts  vite.config.ts  vue_frontend_instructions.md
frontend/src/: App.vue  main.ts
frontend/src/composables/: index.ts  useAuth.ts  useBilling.ts  useChat.ts  useModels.ts  useNotification.ts  usePermission.ts  useTheme.ts  useValidation.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/services/: http.ts  index.ts  storage.ts  websocket.ts
frontend/src/services/api/: auth.ts  billing.ts  chat.ts  models.ts
frontend/src/stores/: auth.ts  billing.ts  chat.ts  index.ts  models.ts  ui.ts
frontend/src/types/: api.ts  billing.ts  chat.ts  global.d.ts  index.ts  model.ts  user.ts
frontend/src/views/: ChatView.vue  HomeView.vue  TestStoresView.vue
frontend/src/views/auth/: LoginView.vue
tests/: test_celery_performance_tasks.py  test_model_configuration_service_improved.py  test_model_performance_integration.py  test_model_performance_service.py  test_performance_benchmarks.py
